add benchmark report